k8s/manifest/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-app
  labels:
    app: web-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: web-app
  template:
    metadata:
      name: web-app
      labels:
        app: web-app
    spec:
      containers:
        - name: web-app
          image: janohjr/wep-app:v1
          ports:
            - containerPort: 8080
