k8s/manifest/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: anyeweb.com
      http:
        paths:
          - backend:
              service:
                name: web-app-svc
                port:
                  number: 80
            pathType: Prefix
            path: /
